fix colour contrast

--- a/src/styles/_root-css-vars.css
+++ b/src/styles/_root-css-vars.css
@@ -4,7 +4,7 @@
     --color-text: 0 0% 20%;
     --color-background: 0 0% 95%;
     --color-neutral-100: 0 0% 5%;
-    --color-link: 29 92% 48%;
+    --color-link: 29 92% 35%;
     --color-focus: 203 90% 39%;
 
     --type-font-family: 'Roboto Slab', serif;
